# clang-msvc-sdk-win32s

./: README.md  clang-cl-msvc.cmake
example/: CMakeLists.txt  hello-world.cpp
